<resources>
    <string name="app_name">My Contact Gue</string>
    <string name="action_settings">Settings</string>
    <string name="contact_list_label">Contacts</string>
    <string name="contact_detail_label">Contact Details</string>
    <string name="create_contact_label">New Contact</string>
    <string name="edit_contact_label">Edit Contact</string>
    <string name="call_log_label">History</string>
    <string name="sms_list_label">Messages</string>
    
    <!-- Form Validation & Hints -->
    <string name="hint_name">Full Name</string>
    <string name="hint_phone">Phone Number</string>
    <string name="hint_email">Email Address</string>
    <string name="hint_birthday">Birthday</string>
    <string name="error_empty_name">Name cannot be empty</string>
    <string name="error_invalid_phone">Invalid phone number</string>
    
    <!-- Buttons & Actions -->
    <string name="btn_save">Save Contact</string>
    <string name="btn_call">Call</string>
    <string name="btn_message">SMS</string>
    <string name="btn_email">Email</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    
    <!-- Dialogs -->
    <string name="delete_contact_title">Delete Contact</string>
    <string name="delete_contact_msg">Are you sure you want to delete %s?</string>
    
    <!-- Toasts -->
    <string name="contact_saved_toast">Contact %s saved</string>
    <string name="contact_updated_toast">Contact %s updated</string>
    <string name="contact_deleted_toast">Contact %s deleted</string>
    <string name="permission_denied">Permission denied</string>
    <string name="error_no_phone">Phone number is not available</string>
    
    <!-- Search -->
    <string name="search_hint">Search contacts…</string>
</resources>